Method invokes inefficient Number constructor